--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
-<!DOCTYPE html>
+-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Cool Page Title</title>
+    <title>The Drum Kit </title>
 </head>
-<body>
-    <h1>My Main Heading</h1>
-    <p>This is a paragraph of text.</p>
+<body> . </p>Drums are a type of percussion instrument that produce sound when a stretched membrane,<br>
+    or "drumhead," is struck with a hand, sticks, or mallets. They are a foundational element <br>
+    in music, providing rhythm and setting the tempo. A common setup is the <b>drum kit</b>, a  <br>
+    collection of various drums and cymbals that a single player can perform on. </p> 
+
+
+
+
+
+
+
+
+
+    
 </body>
 </html>
