--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Drum Kit </title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body> . </p>Drums are a type of percussion instrument that produce sound when a stretched membrane,<br>
     or "drumhead," is struck with a hand, sticks, or mallets. They are a foundational element <br>
