--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 
 <img src="drum kit .jpg" alt="This is what a drum kit looks like" width="406">
 
+    <p>Click to hear how a acoustic drumkit sounds.</p>
+    
+ <a href="https:/https://www.google.com/search?q=drumkit&rlz=1C1GCEA_enBH1198&oq=drumkit&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIGCAEQABgeMgYIAhAAGB4yCAgDEAAYChgeMggIBBAAGAoYHjIICAUQABg
+     KGB4yCAgGEAAYChgeMggIBxAAGAoYHjIGCAgQABgeMgYICRAAGB7SAQkzNDQ1ajBqMTWoAgCwAgE&sourceid=chrome&ie=UTF-8&sei=0-lxaYncOcCdhbIPxNX_kAw&safe=active&ssui=on">Acoustic Drumkit</a>
 
-
-
-
-
+    <p> There are many extensions you can add to the drum kit but here are the main ones </p>
+ <ul><li>At least one Crash</li><li>Snare</li><li> Bass drum</li><li>High tom</li><li>Middle tom</li><li> Hi-hat</li><li>Floor drum</li>
 
     
 </body>
