--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     <p> There are many extensions you can add to the drum kit but here are the main ones </p>
  <ul><li>At least one Crash</li><li>Snare</li><li> Bass drum</li><li>High tom</li><li>Middle tom</li><li> Hi-hat</li><li>Floor drum</li>
 
-    
+    <img src=""
 </body>
 </html>
