--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     in music, providing rhythm and setting the tempo. A common setup is the <b>drum kit</b>, a  <br>
     collection of various drums and cymbals that a single player can perform on. </p> 
 
-<img src="drum kit .jpg" alt="This is what a drum kit looks like" width="406">
+<img src="drum kit .jpg"width="406">
+    <p>This is what a drum kit looks like</p>
 
     <p>Click to hear how a acoustic drumkit sounds.</p>
     
@@ -23,6 +24,8 @@
     <p> There are many extensions you can add to the drum kit but here are the main ones </p>
  <ul><li>At least one Crash</li><li>Snare</li><li> Bass drum</li><li>High tom</li><li>Middle tom</li><li> Hi-hat</li><li>Floor drum</li>
 
-    <img src="Drumkit with extensions.jpg" alt="This is an example of a drumkit with 14-15 extensions"width="606">
+    <img src="Drumkit with extensions.jpg"width="606">
+
+     <p>This is an example of a drumkit with 14-15 extensions</p>
 </body>
 </html>
