--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <h1>What are the drums?</h1>
 <p>Drums are a type of percussion instrument that produce sound when a stretched membrane,<br>
     or "drumhead," is struck with a hand, sticks, or mallets. They are a foundational element <br>
-    in music, providing rhythm and setting the tempo. A common setup is the <b>drum kit</b>, a  <br>
+    in music, providing rhythm and setting the tempo. A common setup is the <i><b>drum kit</b></i>, a  <br>
     collection of various drums and cymbals that a single player can perform on. </p> 
 
 <img src="drum kit .jpg"width="406">
