--- a/index.html
+++ b/index.html
@@ -27,5 +27,43 @@
     <img src="Drumkit with extensions.jpg"width="606">
 
      <p>This is an example of a drumkit with 14-15 extensions</p>
+
+     <table>
+  <tr>
+    <th>Part</th>
+    <th>Brand most reccomended</th>
+    <th>Alternative brand</th>
+  </tr>
+  <tr>
+    <td> Bass drum</td>
+    <td>DW drums</td>
+    <td>Tama</td>
+  </tr>
+  <tr>
+    <td>Snare</td>
+    <td> DW Drums</td>
+    <td>Gibraltar hardware</td>
+  </tr>
+  <tr>
+    <td>Hi-hat</td>
+    <td>DW Drums</td>
+    <td>Tama</td>
+  </tr>
+  <tr>
+    <td>Floor drum</td>
+    <td>Tama</td>
+    <td>DW drums</td>
+  </tr>
+  <tr>
+    <td>Crash</td>
+    <td>Zildjian</td>
+    <td>Sabian</td>
+  </tr>
+  <tr>
+    <td>Hi-tom amd Middle Tom</td>
+    <td>DW Drums</td>
+    <td>Tama</td>
+  </tr>
+</table>
 </body>
 </html>
